--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
-    "openai": "^5.1.1"
+    "openai": "^5.1.1",
+    "stripe": "^18.2.1"
   }
 }
