--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "openai": "^5.1.1",
+    "pdfkit": "^0.17.1",
     "stripe": "^18.2.1"
   }
 }
